<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_home_black_24dp"
      android:title="@string/nav_home"/>
    <item
      android:id="@+id/nav_record"
      android:icon="@drawable/ic_fiber_manual_record_black_24dp"
      android:title="@string/nav_record"/>
    <item
      android:id="@+id/nav_convert"
      android:icon="@drawable/ic_music_note_black_24dp"
      android:title="@string/nav_convert"/>
    <item
      android:id="@+id/nav_manage"
      android:icon="@drawable/ic_menu_manage"
      android:title="Tools"/>
  </group>

  <item android:title="Communicate">
    <menu>
      <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="Share"/>
      <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_menu_send"
        android:title="Send"/>
    </menu>
  </item>

</menu>
