<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:id="@+id/textView"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true" />

  <Button
    android:id="@+id/record_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/record_button"
    android:layout_alignParentStart="true"/>

  <Button
    android:id="@+id/stop_button"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text="@string/stop_button"
    android:layout_centerHorizontal="true"/>

  <Button
    android:id="@+id/delete_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/erase_button"
    android:layout_alignParentEnd="true"/>


  <ListView
    android:id="@+id/record_list"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_below="@id/record_button"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_alignParentBottom="true"/>


</RelativeLayout>